# axiom

./: .editorconfig  .gitattributes  .gitignore  .hgignore  .hgsvnexternals  BuildCL.lnk  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.txt  Credits.txt  GitVersion.yml  Nuget.config  TODO  Top.module  VS2003.bat  VS2005Express.bat  appveyor.yml  axiom.msbuild  azure-pipelines.yml  build.cake  build.cmd  build.ps1  build.sh  buildSDK.cmd  config.wyam  license.txt  nuget.config  publish.msbuild  publishBuild.cmd  readme.md  readme.txt
Lib/Managed/XPlatform/Tao/2.1.0.0/source/: .gitignore  AUTHORS  Assembly.am  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  Program.am  README  TODO  bootstrap  build-debug.bat  build-debug.sh  build.bat  build.sh  buildmono-debug.bat  buildmono.bat  clean.bat  clean.sh  configure.ac  create-installer.bat  create-installer.sh  project.build.include  tao.build  taoframework.spec.suse.example  template.pc
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/: Makefile.am  Makefile.in
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/CgExamples/: CgExamples.Designer.cs  CgExamples.cs  CgExamples.csproj  CgExamples.exe.build  Gl_01_vertex_program.cs  Gl_02_vertex_and_fragment_program.cs  Gl_14_bulge_program.cs  Makefile.am  Makefile.in  Program.cs  README
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/DevIlExamples/: DevIlExamples.csproj  DevIlExamples.exe.build  Makefile.am  Makefile.in  SimpleExample.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/FFmpegExamples/: AudioStream.cs  Decoder.cs  FFmpegExamples.csproj  FFmpegExamples.exe.build  Makefile.am  Player.Designer.cs  Player.cs  Player.resx  Program.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/FreeGlutExamples/: FreeGlutExamples.csproj  FreeGlutExamples.exe.build  FreeGlutExamples.sh  Makefile.am  Makefile.in  One.cs  README
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/GeWangExamples/: ClippingPlanes.cs  GeWangExamples.Designer.cs  GeWangExamples.cs  GeWangExamples.csproj  GeWangExamples.exe.build  GeWangExamples.sh  Lorenz3d.cs  Makefile.am  Makefile.in  Mirror.cs  Program.cs  Shadow.cs  Starfield.cs  Xform.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/GlfwExamples/: Boing.cs  Cube.cs  Gears.cs  GlfwExamples.Designer.cs  GlfwExamples.cs  GlfwExamples.csproj  GlfwExamples.exe.build  GlslLesson01.cs  KeyTest.cs  ListModes.cs  Makefile.am  Makefile.in  Pong.cs  Program.cs  Triangle.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/LuaFunctions/: Functions.cs  LuaFunctions.csproj  LuaFunctions.exe.build  LuaFunctions.sh  Makefile.am  Makefile.in
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/LuaSimple/: LuaSimple.csproj  LuaSimple.exe.build  LuaSimple.sh  Makefile.am  Makefile.in  README  Simple.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/NateRobins/: Area.cs  Maiden.cs  Makefile.am  Makefile.in  MultiView.cs  NateRobins.Designer.cs  NateRobins.cs  NateRobins.csproj  NateRobins.exe.build  Nii.cs  Null.cs  Program.cs  Qix.cs  Rotate.cs  Starfield.cs  Strip.cs  Texture.cs  Voronoi.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/NeHe/: Lesson01.cs  Lesson02.cs  Lesson03.cs  Lesson04.cs  Lesson05.cs  Lesson06.cs  Lesson07.cs  Lesson08.cs  Lesson09.cs  Lesson10.cs  Lesson11.cs  Lesson12.cs  Lesson13.cs  Lesson14.cs  Lesson15.cs  Lesson16.cs  Lesson17.cs  Lesson18.cs  Lesson19.cs  Lesson20.cs  Lesson21.cs  Lesson23.cs  Lesson25.cs  Lesson26.cs  Lesson34.cs  Makefile.am  Makefile.in  NeHe.Designer.cs  NeHe.cs  NeHe.csproj  NeHe.exe.build  Program.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/OdeExamples/: Makefile.am  Makefile.in  OdeExamples.csproj  OdeExamples.exe.build  OdeExamples.sh
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/OpenAlExamples/: Boxes.cs  Lesson01.cs  Lesson02.cs  Lesson03.cs  Lesson05.cs  Makefile.am  Makefile.in  OpenAlExamples.Designer.cs  OpenAlExamples.cs  OpenAlExamples.csproj  OpenAlExamples.exe.build  Program.cs  Sound.cs  Waterfall.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/PhysFsExamples/: COPYING  Makefile.am  Makefile.in  PhysFsExamples.csproj  PhysFsExamples.exe.build  PhysFsExamples.sh  README  Simple.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/Redbook/: Aaindex.cs  Aapoly.cs  Aargb.cs  Accanti.cs  Accpersp.cs  Alpha.cs  Alpha3d.cs  Anti.cs  Bezcurve.cs  Bezmesh.cs  Bezsurf.cs  Checker.cs  CheckerOld.cs  Clip.cs  Colormat.cs  Cube.cs  DepthCue.cs  Dof.cs  Double.cs  Drawf.cs  Feedback.cs  Fog.cs  FogIndex.cs  FogIndexOld.cs  FogOld.cs  Font.cs  Hello.cs  Image.cs  Light.cs  Lines.cs  List.cs  Makefile.am  Makefile.in  Material.cs  Mipmap.cs  Model.cs  MoveLight.cs  Nurbs.cs  PickDepth.cs  PickSquare.cs  (+35 more)
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/SdlExamples/: GfxPrimitives.cs  Makefile.am  Makefile.in  Program.cs  Rectangles.cs  SdlExamples.Designer.cs  SdlExamples.cs  SdlExamples.csproj  SdlExamples.exe.build  SdlExamples.resx  SmpegPlayer.cs
Lib/Managed/XPlatform/Tao/2.1.0.0/source/examples/TaoMediaPlayer/: AudioSource.cs  MainForm.Designer.cs  MainForm.cs  MediaFile.cs  TaoMediaPlayer.csproj  TaoMediaPlayer.exe.build
Lib/Managed/XPlatform/Tao/2.1.0.0/source/m4/: Makefile.am  Makefile.in  acx_version.m4  ax_check_gl.m4
Lib/Managed/XPlatform/Tao/2.1.0.0/source/other/Prebuild/: COPYING
Lib/Managed/XPlatform/Tao/2.1.0.0/source/other/Tao_Logos/: tao.icns
Lib/Managed/XPlatform/Tao/2.1.0.0/source/other/win32installer/: TaoFramework.nsi  runtime.ini
Lib/Managed/XPlatform/Tao/2.1.0.0/source/src/: Makefile.am  Makefile.in  Tao.source
Lib/Managed/XPlatform/Tao/2.1.0.0/source/src/Tao.Cg/: Cg.cs  CgGl.cs  Makefile.am  Makefile.in  README  Tao.Cg.csproj  Tao.Cg.dll.build  Tao.Cg.dll.config  tao-cg.pc.in
Lib/Managed/XPlatform/Tao/2.1.0.0/source/src/Tao.DevIl/: Ilu.cs  Makefile.am  Makefile.in  README  Tao.DevIl.build  Tao.DevIl.csproj  Tao.DevIl.dll.build  Tao.DevIl.dll.config  Tao.DevIl.sln  Tao.DevIl.xml  tao-devil.pc.in
Lib/Managed/XPlatform/Tao/2.1.0.0/source/src/Tao.Ode/: TODO  (+11 more)
Lib/Managed/XPlatform/Tao/2.1.0.0/source/tests/: Makefile.am  Makefile.in
(+10113 files in other folders)
