
AUTOMAKE_OPTIONS = dist-bzip2
SUBDIRS = src tests examples
DIST_SUBDIRS = $(SUBDIRS) m4

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
    build.bat \
    build.sh \
    build-debug.bat \
    build-debug.sh \
    buildmono.bat \
    buildmono-debug.bat \
    clean.bat \
    clean.sh \
    other/win32installer/runtime.ini \
    other/win32installer/Tao.nsi \
    other/Tao_Logos/TaoButton.jpg \
    other/Tao_Logos/tao.ico \
    other/Tao_Logos/TaoPill.gif \
    other/Tao_Logos/yinyangblue.gif \
    prebuild.xml \
    taoframework.spec.suse.example \
    template.pc \
    tao.build

