
SUBDIRS = CgExamples \
          DevIlExamples \
          FFmpegExamples \
          FreeGlutExamples \
          GeWangExamples \
          GlfwExamples \
          LuaFunctions \
          LuaSimple \
          NateRobins \
          NeHe \
          OdeExamples \
          OpenAlExamples \
          PhysFsExamples \
          Redbook \
          SdlExamples
