
PROGRAM = OdeExamples
PACKAGES =
BINARY_LIBS = Tao.Ode.dll
SYSTEM_LIBS = \
        System \
        System.Windows.Forms \
        System.Data \
        System.Drawing
RESX =
RESOURCES =
SOURCES = \
        Basic.cs \
        Properties/AssemblyInfo.cs
KEYFILE = ../../src/Tao.Ode/Tao.Ode.snk

include $(top_srcdir)/Program.am

