
PROGRAM = Redbook
PACKAGES =
BINARY_LIBS = \
        Tao.FreeGlut.dll \
        Tao.OpenGl.dll
SYSTEM_LIBS = \
        System \
        System.Windows.Forms \
        System.Data \
        System.Drawing
RESX = Redbook.resx
RESOURCES = $(PROGRAM).Redbook.resources
SOURCES = \
        Redbook.cs \
        Aaindex.cs \
        Aapoly.cs \
        Aargb.cs \
        Accanti.cs \
        Accpersp.cs \
        Alpha.cs \
        Alpha3d.cs \
        Anti.cs \
        Bezcurve.cs \
        Bezmesh.cs \
        Bezsurf.cs \
        Checker.cs \
        CheckerOld.cs \
        Clip.cs \
        Colormat.cs \
        Cube.cs \
        DepthCue.cs \
        Dof.cs \
        Double.cs \
        Drawf.cs \
        Feedback.cs \
        Fog.cs \
        FogIndex.cs \
        FogIndexOld.cs \
        FogOld.cs \
        Font.cs \
        Hello.cs \
        Image.cs \
        Jitter.cs \
        Light.cs \
        Lines.cs \
        List.cs \
        Material.cs \
        Mipmap.cs \
        Model.cs \
        MoveLight.cs \
        Nurbs.cs \
        PickDepth.cs \
        PickSquare.cs \
        Plane.cs \
        Planet.cs \
        PolyOff.cs \
        Polys.cs \
        Program.cs \
        Quadric.cs \
        Redbook.Designer.cs \
        Robot.cs \
        Scene.cs \
        SceneBlueAmbient.cs \
        SceneColorLight.cs \
        SceneFlat.cs \
        Select.cs \
        Smooth.cs \
        Stencil.cs \
        Stroke.cs \
        Surface.cs \
        SurfaceOld.cs \
        TeaAmbient.cs \
        Teapots.cs \
        Tess.cs \
        TessWind.cs \
        TexBind.cs \
        TexGen.cs \
        TexProx.cs \
        TexSub.cs \
        TextureSurf.cs \
        Torus.cs \
        Trim.cs \
        UnProject.cs \
        Varray.cs \
        Wrap.cs \
        Properties/AssemblyInfo.cs
KEYFILE = ../../src/Tao.FreeGlut/Tao.FreeGlut.snk

$(PROGRAM).Redbook.resources: Redbook.resx
	$(RESGEN) $< $@

include $(top_srcdir)/Program.am

