
ASSEMBLY = Tao.Cg
SHORTNAME = tao-cg
VERSION = @TAOCG_VERSION@
MAJOR = @TAOCG_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Cg.cs \
        CgGl.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

