
ASSEMBLY = Tao.DevIl
SHORTNAME = tao-devil
VERSION = @TAODEVIL_VERSION@
MAJOR = @TAODEVIL_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Il.cs \
        Ilu.cs \
        Ilut.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

