
ASSEMBLY = Tao.FFmpeg
SHORTNAME = tao-ffmpeg
VERSION = @TAOFFMPEG_VERSION@
MAJOR = @TAOFFMPEG_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        AVCodec.cs \
        AVFormat.cs \
        AVSWScale.cs \
        AVUtil.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

