
ASSEMBLY = Tao.FreeGlut
SHORTNAME = tao-freeglut
VERSION = @TAOFREEGLUT_VERSION@
MAJOR = @TAOFREEGLUT_MAJOR@

PACKAGES =
BINARY_LIBS = ../Tao.OpenGl/Tao.OpenGl.dll
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Glut.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

