
ASSEMBLY = Tao.FreeType
SHORTNAME = tao-freetype
VERSION = @TAOFREETYPE_VERSION@
MAJOR = @TAOFREETYPE_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        FreeType.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

