
ASSEMBLY = Tao.Glfw
SHORTNAME = tao-glfw
VERSION = @TAOGLFW_VERSION@
MAJOR = @TAOGLFW_MAJOR@

PACKAGES =
BINARY_LIBS = ../Tao.OpenGl/Tao.OpenGl.dll
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Glfw.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

