
ASSEMBLY = Tao.Lua
SHORTNAME = tao-lua
VERSION = @TAOLUA_VERSION@
MAJOR = @TAOLUA_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Lua.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

