
ASSEMBLY = Tao.Ode
SHORTNAME = tao-ode
VERSION = @TAOODE_VERSION@
MAJOR = @TAOODE_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Ode.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

