
ASSEMBLY = Tao.OpenAl
SHORTNAME = tao-openal
VERSION = @TAOOPENAL_VERSION@
MAJOR = @TAOOPENAL_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Al.cs \
	Alc.cs \
	Alut.cs \
	ALDelegates.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

