
ASSEMBLY = Tao.OpenGl
SHORTNAME = tao-opengl
VERSION = @TAOOPENGL_VERSION@
MAJOR = @TAOOPENGL_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        GLCore.cs \
        GLDelegates.cs \
        GLEnums.cs \
        Gl.cs \
        GlExtensionLoader.cs \
        GlHelper.cs \
        Glu.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

