
ASSEMBLY = Tao.PhysFs
SHORTNAME = tao-physfs
VERSION = @TAOPHYSFS_VERSION@
MAJOR = @TAOPHYSFS_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Fs.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

