
ASSEMBLY = Tao.Platform.Windows
SHORTNAME = tao-platform-windows
VERSION = @TAOWINDOWS_VERSION@
MAJOR = @TAOWINDOWS_MAJOR@

PACKAGES =
BINARY_LIBS = ../Tao.OpenGl/Tao.OpenGl.dll
SYSTEM_LIBS = \
        System \
        System.Drawing \
        System.Windows.Forms
RESOURCES =
SOURCES = \
        Gdi.cs \
        IlasmAttribute.cs \
        Kernel.cs \
        SimpleOpenGlControl.cs \
        User.cs \
        Wgl.cs \
        WglCore.cs \
        WglDelegates.cs \
        WglEnums.cs \
        WglHelper.cs \
        WinNt.cs \
        Winmm.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

