
ASSEMBLY = Tao.Platform.X11
SHORTNAME = tao-platform-x11
VERSION = @TAOX11_VERSION@
MAJOR = @TAOX11_MAJOR@

PACKAGES =
BINARY_LIBS = ../Tao.OpenGl/Tao.OpenGl.dll
SYSTEM_LIBS = \
        System \
        System.Drawing \
        System.Windows.Forms
RESOURCES =
SOURCES = \
        API.cs \
        Functions.cs \
        Glx.cs \
        Structs.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

