
ASSEMBLY = Tao.Sdl
SHORTNAME = tao-sdl
VERSION = @TAOSDL_VERSION@
MAJOR = @TAOSDL_MAJOR@

PACKAGES =
BINARY_LIBS =
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Sdl.cs \
        SdlGfx.cs \
        SdlImage.cs \
        SdlMixer.cs \
        SdlNet.cs \
        SdlTtf.cs \
        Smpeg.cs \
        Properties/AssemblyInfo.cs
KEYFILE = $(ASSEMBLY).snk
CONFIGFILE = $(ASSEMBLY).dll.config

include $(top_srcdir)/Assembly.am

