
ASSEMBLY = Tao.Ode.Tests
SHORTNAME = tao-ode-tests
VERSION = @TAOODE_VERSION@
MAJOR = @TAOODE_MAJOR@

PACKAGES = nunit
BINARY_LIBS = ../../src/Tao.Ode/Tao.Ode.dll
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        Matrix3Marshalling.cs \
        Properties/AssemblyInfo.cs
KEYFILE = ../../src/Tao.Ode/Tao.Ode.snk
CONFIGFILE = 

include $(top_srcdir)/Assembly.am

