
ASSEMBLY = Tao.Sdl.Tests
SHORTNAME = tao-sdl-tests
VERSION = @TAOSDL_VERSION@
MAJOR = @TAOSDL_MAJOR@

PACKAGES = nunit
BINARY_LIBS = ../../src/Tao.Sdl/Tao.Sdl.dll
SYSTEM_LIBS = System
RESOURCES =
SOURCES = \
        SdlTest.cs \
        SdlTestGfx.cs \
        SdlTestImage.cs \
        SdlTestMixer.cs \
        SdlTestTtf.cs \
        SdlTestVideo.cs \
        SmpegTest.cs \
        Properties/AssemblyInfo.cs
KEYFILE = ../../src/Tao.Sdl/Tao.Sdl.snk
CONFIGFILE = 

include $(top_srcdir)/Assembly.am

